--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
@@ -3,7 +3,7 @@
 		<div id="page">
 		<div id="content">
 		<cms:paging>
-		<div id="box1" class="boxA">
+		<div id="product-small-box" class="boxA">
 		<div class="title">
 		<h1><category:value property="Name"/>
       <webshop:current-search-string> &#160;&#12539; Search for '<object:value/>'</webshop:current-search-string>
