--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/index.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/index.html
@@ -3,7 +3,7 @@
 	<!-- end #banner -->
 	<div id="page">
 		<div id="content">
-			<div id="box1" class="boxA">
+			<div id="product-small-box" class="boxA">
 				<div class="title">
 					<h1>Featured Items</h1>
 				</div>
