git-svn-id: file:///var/svn/claro-catalog@317 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/cart.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/cart.html
@@ -49,7 +49,7 @@
     </shopping-cart:items>
     <shopping-cart:items>
       <list:last>
-        <div class="buttons">
+        <div class="button-bar">
           <shopping-cart:proceed-order-link id="place-order-button" class="button">Place Order</shopping-cart:proceed-order-link>
 		</div>
       </list:last>
