--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
@@ -3,7 +3,7 @@
 		<div id="page">
 		<div id="content">
 		<cms:paging>
-		<div id="product-small-box" class="boxA">
+		<div id="product-box-box" class="boxA">
 		<div class="title">
 		<h1><category:value property="Name"/>
       <webshop:current-search-string> &#160;&#12539; Search for '<object:value/>'</webshop:current-search-string>
@@ -19,7 +19,7 @@
 		<div class="content">
 		<ul class="list2">
 			<webshop:current-products include-sub-categories="true" page-size="8">
-        <template:include template="templates/product-small"/>
+        <template:include template="templates/product-box"/>
 			</webshop:current-products>
 		</ul>
 		</div>
