--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/search.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/search.html
@@ -17,7 +17,7 @@
 	<ul class="list2">
 	        <list:repeat>
 				<li list:even="class=alt">
-		    	<template:include template="templates/product-small"></template:include>
+		    	<template:include template="templates/product-box"></template:include>
 		    	</li>
 	        </list:repeat>
 	</ul>
