--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/resetpassword.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/resetpassword.html
@@ -1,15 +1,17 @@
+<template:include template="templates/pageframe">
 <webshop:current-user>
 	<template:content/>
 	<object:none>
+	  <div id="content" class="boxA wide">
 	  <div class="title">
-		 <h1>Login</h1>
+		 <h1>Reset Password</h1>
 	  </div>
 	  <div class="content">
-	    <webshop:login-form class="form">
+	    <webshop:reset-password-form href="/resetpasswordconfirmation" change-password-href="/changepassword">
     	  <div class="infobox">
-		  	<p>First visit?<br/><a href="/register">register</a></p> 
-		  	<p>Forgot password?<br/><a href="/resetpassword">reset password</a></p> 
-    	  </div>
+		  	<p>Please, specify your email address.<br/>
+		  	An email will be sent that allows you <br/>to change the password.</p>
+	      </div>
 	      <table> 
 	        <form:email-field>
 		        <tr><td>Email</td><td><field:field/></td></tr>
@@ -17,12 +19,6 @@
 		        	<tr class="error"><td></td><td><span class="error"><error:message/></span></td></tr>
 	        	</field:error>
         	</form:email-field>
-	        <form:password-field>
-		        <tr><td>Password</td><td><field:field/></td></tr>
-		        <field:error>
-		        	<tr class="error"><td></td><td><span class="error"><error:message/></span></td></tr>
-	        	</field:error>
-        	</form:password-field>
         	<tr><td>
         	</td>
         	<td>
@@ -30,13 +26,15 @@
 	      		<form:form-errors><li><span class="error"><error:message/></span></li></form:form-errors> 
 	        </ul>
 			<div class="button-bar">
-				<form:login-button class="button1">Login</form:login-button>
+				<form:submit-button class="button4" value="Reset Password" />
 			</div>
         	</td>
         	</tr>
 	      </table>
-		</webshop:login-form>
+		</webshop:reset-password-form>
 		  <div style="clear: both"/>
+		</div>
 		</div>
 	</object:none>
 </webshop:current-user>
+</template:include>
