git-svn-id: file:///var/svn/claro-catalog@320 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/cart.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/cart.html
@@ -48,7 +48,7 @@
       <list:none><ul class="messages"><li>There are no items in the shopping cart</li></ul></list:none>
     
          <div class="button-bar">
-          <shopping-cart:proceed-order-link id="place-order-button" class="button4">Proceed To Order >></shopping-cart:proceed-order-link>
+          <shopping-cart:proceed-order-link id="place-order-button" class="button4" href="/delivery-address">Proceed To Order >></shopping-cart:proceed-order-link>
 		</div>
 		<div style="clear: both"/>
     </shopping-cart:items>
