--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/changepassword.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/changepassword.html
@@ -24,9 +24,10 @@
 
 		<tr><td></td><td>
 	      <ul class="messages">
-      		<form:errors><li><span class="error"><error:message/></span></li></form:errors> 
+      		<form:form-errors><li><span class="error"><error:message/></span></li></form:form-errors> 
           </ul>
-		<div class="buttons-bar"><form:change-password-button class="button4" /></div></td></tr>
+        	</td></tr><tr><td></td><td>
+		<div class="buttons-bar"><form:change-password-button class="button4" href="/changepasswordconfirmation"/></div></td></tr>
 </table>
 
     <object:none><p>Password change request has been expired.</p>
