--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/index.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/index.html
@@ -10,13 +10,9 @@
 				<div class="content">
 					<ul class="list2">
 						<webshop:promotions>
-						<li list:even="class=alt">
 							<promotion:product>
-							<p class="image"><a href="#"><product:value property="Image" height="84px" class="border" /></a></p>
-							<h3><a href="#"><product:value property="Name"/></a></h3>
-							<p><a href="#" class="add">Add to Cart</a> <b><product:value property="Price"/></b></p>
+							<template:include template="templates/product-box"/>
 							</promotion:product>
-						</li>
 						</webshop:promotions>
 					</ul>
 				</div>
