--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/login.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/login.html
@@ -1,18 +1,13 @@
 <template:include template="templates/pageframe">
-  <head>
-  	<link href="/shipping.css" rel="stylesheet" type="text/css" />
-  </head>
 	  <div id="content" class="boxA wide">
 <template:include template="templates/require-login">
   <div class="title">
-	 <h1>Login</h1>
+	 <h1>Logged in</h1>
   </div>
   <div class="content">
-  <div class="boxA">
-  <webshop:user-info-form>
-  Welcome, <form:user><user:name/></form:user>
-  </webshop:user-info-form>
-  </div>
+  <webshop:current-user>
+  Welcome, <user:name/>
+  </webshop:current-user>
   </div>
 </template:include>
 </div>
