--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/search.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/search.html
@@ -1,42 +1,50 @@
 <template:include template="templates/pageframe">
-	<div id="page">
-	<div id="content">
-	<div id="box1" class="boxA">
-	<div class="title">
-  <h1>Search results for '<webshop:current-search-string/>'
-  	<webshop:current-category> in category '<category:name/>'</webshop:current-category>
-  </h1>
-	</div>
-	<div class="content">
 	  <webshop:current-search-products>
-	      <list:none>
-	        <p>No search results found</p>
-		      <webshop:current-category> <webshop:search-all class="link">search for '<webshop:current-search-string/>' in entire catalog</webshop:search-all></webshop:current-category>		  
-	      </list:none>
-	      <div><webshop:current-category> <webshop:search-all class="link">search for '<webshop:current-search-string/>' in entire catalog</webshop:search-all></webshop:current-category></div>		  
-	<ul class="list2">
-	        <list:repeat>
-				<li list:even="class=alt">
-		    	<template:include template="templates/product-box"></template:include>
-		    	</li>
-	        </list:repeat>
-	</ul>
-	  </webshop:current-search-products>
+		<div id="page">
+		<div id="content">
+		<cms:paging>
+		<div id="product-box-box" class="boxA">
+		<div class="title">
+		<h1>Search for '<webshop:current-search-string />'
+		  <span class="paging">
+        <paging:single-page><attr:set name="style" value="display:none"/></paging:single-page>
+			<paging:previous>&#171;</paging:previous>
+			<paging:page/>
+			<paging:next>&#187;</paging:next>
+		  </span>
+		</h1>
+		</div>
+    
+		<div class="content">
+		<ul class="list2">
+			<list:repeat>
+        <template:include template="templates/product-box"/>
+        </list:repeat>
+		</ul>
+		</div>
+		</div>
+		</cms:paging>
+		</div>
+    <!--  #content -->
+    
+		<div id="sidebar">
 
-	</div>
-	</div>
-	</div>
-	<div id="sidebar">
-	<div id="box3" class="boxA">
-	<div class="title">
-	<h1>Volutpat Sed Tempus</h1>
-	</div>
-	<div class="content"><a href="#"><img
-		src="images/homepage12.jpg" alt="" width="222" height="138" /></a></div>
-	</div>
-	<!-- end #box3.boxA --></div>
-	<!-- end #sidebar --> <!-- end #sidebar -->
-	<div style="clear: both;">&#160;</div>
-	</div>
-	<!-- end #page -->
+
+  <template:include template="templates/filters" />
+
+		<div id="box3" class="boxA">
+		<div class="title">
+		<h1>Volutpat Sed Tempus</h1>
+		</div>
+		<div class="content"><a href="#"><img
+			src="/images/homepage12.jpg" alt="" width="222" height="138" /></a></div>
+		</div>
+		<!-- end #box3.boxA -->
+    </div>
+    <!-- end #sidebar -->
+
+		<div style="clear: both;">&#160;</div>
+		</div>
+		<!-- end #page -->
+	</webshop:current-search-products>
 </template:include>
