--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/page_head.html
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/page_head.html
@@ -1,4 +1,4 @@
     <title>Tetterode</title>
     <link rel="stylesheet" type="text/css" href="/webshop.css" />
     <link rel="stylesheet" type="text/css" href="/menutheme.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="/images/icon.jpg" />
+    <link rel="shortcut icon" type="image/x-icon" href="/images/icon.png" />
