--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/resetpassword.html
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/resetpassword.html
@@ -1,4 +1,4 @@
-<template:include template="templates/pageframe">
+<template:include template="templates/page">
   <div id="content" class="boxA wide">
   <div class="title">
 	 <h1>Reset Password</h1>
