--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/register.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/register.html
@@ -30,7 +30,7 @@
       		<form:form-errors><li><span class="error"><error:message/></span></li></form:form-errors> 
           </ul>
         	</td></tr><tr><td></td><td>
-  <form:register-button class="button2" id="register-button" label="Register" href="/registered"/>
+  <form:register-button class="button2" id="register-button" label="Register" href="/registerconfirmation"/>
 </td></tr>
 
 </table>
