--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/cart.html
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/cart.html
@@ -1,4 +1,4 @@
-<template:include template="templates/user_page">
+<template:include template="templates/page">
  <h1>Shopping Cart</h1>
   <webshop:shopping-cart phase="1" shopping_list_id="shopping_list">
     <div id="shopping_list">
@@ -19,28 +19,40 @@
               <td><product:value property="Description"/></td>
               <td style="text-align:right;"><item:price/></td>
             </item:product>
-            <td style="text-align:right;"><item:volume/></td>
+            <td><item:volume-edit maxlength="3" style="width:30px;margin:0 5px;" /></td>
             <td style="text-align:right;"><item:total-price/></td>
+            <td style="text-align:center;"><item:remove><img src="/images/bin_closed.png" /></item:remove></td>
           </tr>
       </list:repeat>
+       <shopping-cart:total-prices>
           <tr>
-            <td colspan="4"><b>Shipping costs:</b></td>
-            <td style="text-align:right;"><b><shopping-cart:shipping-costs/></b></td>
-            <td>&#160;</td>
-          </tr>
-       <shopping-cart:total-prices-plus-shipping>
-          <tr>
-            <td colspan="4"><list:first><b>Total price:</b></list:first></td>
+            <td colspan="4"><list:first><b>Total price (excl. shipping costs):</b></list:first></td>
             <td style="text-align:right;"><b><total-price:format/></b></td>
             <td>&#160;</td>
           </tr>
-       </shopping-cart:total-prices-plus-shipping>
+       </shopping-cart:total-prices>
         </table>
         <list:none>There are no items in the shopping cart</list:none>
       </shopping-cart:items>
     </div>
+    <shopping-cart:items>
+    <list:last>
     <div class="button-bar">
-    <shopping-cart:place-order>Place order</shopping-cart:place-order>
+    <shopping-cart:proceed-order-link id="place-order-button" class="button" href="/delivery-address">Proceed To Order >></shopping-cart:proceed-order-link>
     </div>
+    </list:last>
+    </shopping-cart:items>
   </webshop:shopping-cart>
+  <!-- lift:ShoppingCart.show phase="2">
+    Address gegevens...
+  </lift:ShoppingCart.show>
+  <lift:ShoppingCart.show phase="3">
+    Betalings methode...
+  </lift:ShoppingCart.show>
+  <lift:ShoppingCart.show phase="4">
+    Bevestigings overzicht...
+  </lift:ShoppingCart.show>
+  <lift:ShoppingCart.show phase="5">
+    Order geplaatst melding...
+  </lift:ShoppingCart.show> -->
 </template:include>
