--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/login.html
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/login.html
@@ -1,17 +1,14 @@
 <template:include template="templates/page">
-    <h1>Login</h1>
-    <webshop:login-form>
-      <table> 
-        <tr><td><form:email-field class="formfield emailfield"/></td></tr>
-        <tr><td><form:password-field class="formfield passwordfield"/>
-        <form:login-button class="formbutton"/></td>
-        </tr>
-        <form:failure> 
-        <tr><td><span class="error">Invalid user name or password</span></td></tr>
-        <tr><td><a href="/register">Forgot password? &gt;&gt;</a></td></tr>
-        </form:failure>
-      </table> 
-    </webshop:login-form>
-     <a href="/register">Register as new customer &gt;&gt;</a>
-  
+	  <div id="content" class="boxA wide">
+<template:include template="templates/require-login">
+  <div class="title">
+	 <h1>Logged in</h1>
+  </div>
+  <div class="content">
+  <webshop:current-user>
+  Welcome, <user:name/>
+  </webshop:current-user>
+  </div>
+</template:include>
+</div>
 </template:include>
