--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/order-confirmation.html
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/order-confirmation.html
@@ -1,5 +1,14 @@
-<template:include template="templates/pageframe">
- <h1>Shopping Cart</h1>
+<template:include template="templates/page">
+  <head>
+  	<link href="/shipping.css" rel="stylesheet" type="text/css" />
+  </head>
+<template:include template="templates/order-sidebar" />
+ <div id="content" class="boxA">
+<template:include template="templates/require-login">
+  <div class="title">
+ <h1>Confirm Order</h1>
+  </div>
+  <div class="content">
   <webshop:shopping-cart phase="1" shopping_list_id="shopping_list">
     <div id="shopping_list">
       <shopping-cart:items>
@@ -19,44 +28,35 @@
               <td><product:value property="Description"/></td>
               <td style="text-align:right;"><item:price/></td>
             </item:product>
-            <td><item:volume-edit maxlength="3" style="width:30px;margin:0 5px;" /></td>
+            <td style="text-align:right;"><item:volume/></td>
             <td style="text-align:right;"><item:total-price/></td>
-            <td style="text-align:center;"><item:remove><img src="/images/bin_closed.png" /></item:remove></td>
           </tr>
       </list:repeat>
-       <shopping-cart:total-prices>
           <tr>
-            <td colspan="4"><list:first><b>Total price (excl. shipping costs):</b></list:first></td>
+            <td colspan="4"><b>Shipping costs:</b></td>
+            <td style="text-align:right;"><b><shopping-cart:shipping-costs/></b></td>
+            <td>&#160;</td>
+          </tr>
+       <shopping-cart:total-prices-plus-shipping>
+          <tr>
+            <td colspan="4"><list:first><b>Total price:</b></list:first></td>
             <td style="text-align:right;"><b><total-price:format/></b></td>
             <td>&#160;</td>
           </tr>
-       </shopping-cart:total-prices>
+       </shopping-cart:total-prices-plus-shipping>
         </table>
         <list:none>There are no items in the shopping cart</list:none>
       </shopping-cart:items>
     </div>
-    <shopping-cart:items>
-    <list:last>
-    <div class="button-bar">
-    <webshop:current-user>
-    <shopping-cart:proceed-order-link>Proceed ordering</shopping-cart:proceed-order-link>
-    <object:none>
-    <br/>Please, login to proceed ordering</object:none>
-    </webshop:current-user>
+    <div class="button-bar" style="float:left;">
+    <a class="button" href="/shipping">&#60;&#60; Shipping Options</a>
     </div>
-    </list:last>
-    </shopping-cart:items>
+    <div class="button-bar" style="float:right;">
+	    <shopping-cart:place-order class="button">Place order</shopping-cart:place-order>
+    </div>
   </webshop:shopping-cart>
-  <!-- lift:ShoppingCart.show phase="2">
-    Address gegevens...
-  </lift:ShoppingCart.show>
-  <lift:ShoppingCart.show phase="3">
-    Betalings methode...
-  </lift:ShoppingCart.show>
-  <lift:ShoppingCart.show phase="4">
-    Bevestigings overzicht...
-  </lift:ShoppingCart.show>
-  <lift:ShoppingCart.show phase="5">
-    Order geplaatst melding...
-  </lift:ShoppingCart.show> -->
+  <div style="clear:both"/>
+  </div>
+  </template:include>
+  </div>
 </template:include>
