--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/promotion.html
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/promotion.html
@@ -1,19 +1,20 @@
 <div class="promotion">
   <!-- img src="images/specialoffer.png" style="position:relative;top:0;right:0" /-->
   <promotion:product>
-     <div style="float:right"><product:value property="Image" height="60px"/></div>
-    <p><product:value property="Description"/>
+     <div style="float:left;padding:10px;"><product:value property="Image" height="60px"/></div>
+     <div style="float:left">
+    <p><product:value property="Name"/>
     <br/><product:link>More info &gt;&gt;</product:link></p>
+    <p style="line-height:10pt">Price when ordered per <b><promotion:volume-discount/></b> articles</p>
+    <p style="font-size:10px;">Promotion ends: <promotion:end-date/></p>
+    </div>
   <div>
-    <webshop:shopping-cart>
-    <shopping-cart:add-promotion>
-      <span class="add_to_cart">Add to Cart</span>
-    </shopping-cart:add-promotion>
-    </webshop:shopping-cart>
+  <div style="float:right;padding-top:20px; padding-right:20px">
     <p><strike><product:value property="Price"/></strike><br/>
     <span style="color:red"><promotion:price/></span></p>
-    <p style="line-height:10pt">Price when ordered <br/>per <b><promotion:volume-discount/></b> articles</p>
-    <p style="font-size:10px;">Promotion ends: <promotion:end-date/></p>
+  	<promotion:add-to-cart-link class="button">Add to Cart</promotion:add-to-cart-link>&#160;&#160;&#160;
+ 	</div>
+ 	<div style="clear:both"/>
   </div>
    </promotion:product>
 </div>
