--- a/easyenterprise/citykids/trunk/war/Citykids.html
+++ b/easyenterprise/citykids/trunk/war/Citykids.html
@@ -12,7 +12,7 @@
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="Citykids2.css">
+    <link type="text/css" rel="stylesheet" href="citykids.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
@@ -24,7 +24,7 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="citykids2/citykids2.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="citykids/citykids.nocache.js"></script>
   </head>
 
   <!--                                           -->
