git-svn-id: file:///var/svn/claro-catalog@395 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/cart.html
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/cart.html
@@ -16,12 +16,12 @@
           <tr>
             <item:product>
               <td><product:value property="ArticleNumber"/></td>
-              <td><product:value property="Description"/></td>
+              <td><product:value property="Name"/></td>
               <td style="text-align:right;"><item:price/></td>
             </item:product>
             <td><item:volume-edit maxlength="3" style="width:30px;margin:0 5px;" /></td>
             <td style="text-align:right;"><item:total-price/></td>
-            <td style="text-align:center;"><item:remove><img src="/images/bin_closed.png" /></item:remove></td>
+            <td style="text-align:center;"><item:remove-link><img src="/images/bin_closed.png" /></item:remove-link></td>
           </tr>
       </list:repeat>
        <shopping-cart:total-prices>
