git-svn-id: file:///var/svn/claro-catalog@706 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/changepassword.html
+++ b/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/changepassword.html
@@ -30,7 +30,7 @@
 		<div class="buttons-bar"><form:change-password-button class="button4" href="/changepasswordconfirmation"/></div></td></tr>
 </table>
 
-    <object:none><p>Password change request has been expired.</p>
+    <object:none><p>Password change request has expired.</p>
     	<p><a href="/resetpassword">Reset password</a></p>
     </object:none>
     </form:is-valid>
