--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/changepassword.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/changepassword.html
@@ -30,7 +30,7 @@
 		<div class="buttons-bar"><form:change-password-button class="button4" href="/changepasswordconfirmation"/></div></td></tr>
 </table>
 
-    <object:none><p>Password change request has been expired.</p>
+    <object:none><p>Password change request has expired.</p>
     	<p><a href="/resetpassword">Reset password</a></p>
     </object:none>
     </form:is-valid>
