git-svn-id: file:///var/svn/claro-catalog@717 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/product.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/product.html
@@ -11,26 +11,26 @@
 <br/><br/><br/>
 <br/><br/><br/>
 	<ul class="css-tabs skin2">
-		<li><a href="#">Properties</a></li>
-		<li><a href="#">Documents</a></li>
+	<product:properties-by-group>
+		<li><a href="#"><group:name/></a></li>
+	</product:properties-by-group>
 	</ul>
 
 <div class="css-panes skin2">
+	<product:properties-by-group>
 	<div class="pane">
 		<table style="border-width: 1px; border-color: #bcb8c0;" border="1"> 
 		<tbody> 
-		<product:properties>
+		<group:properties>
 		<tr> 
 		<td style="border: #bcb8c0 1px solid;" valign="top"><property:name/>:</td> 
 		<td style="border: #bcb8c0 1px solid;" valign="top"><property:value/></td> 
 		</tr> 
-		</product:properties>
+		</group:properties>
 		</tbody>
 		</table>
 	</div>
-	<div class="pane">
-		<p></p>
-	</div>
+	</product:properties-by-group>
 </div>
 
 <script type="text/javascript">
