git-svn-id: file:///var/svn/claro-catalog@749 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/login.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/login.html
@@ -1,4 +1,4 @@
-<template:include template="templates/page">
+<template:include template="templates/ordering_page">
 	  <div id="content" class="boxA wide">
 <template:include template="templates/require-login">
   <div class="title">
