--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/promotion.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/promotion.html
@@ -1,5 +1,5 @@
 <div class="promotion">
-  <!-- img src="images/specialoffer.png" style="position:relative;top:0;right:0" /-->
+  <img src="/images/specialoffer.png" width="60px" style="position:absolute;top:-20px;left:-20px"/>
   <promotion:product>
      <div style="float:left;padding:10px;"><product:value property="Image" height="60px"/></div>
      <div style="float:left">
