--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/delivery-address.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/delivery-address.html
@@ -1,4 +1,4 @@
-<template:include template="templates/page">
+<template:include template="templates/ordering_page">
   <head>
   	<link href="/shipping.css" rel="stylesheet" type="text/css" />
   </head>
