--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/category.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/category.html
@@ -23,9 +23,12 @@
 		  </table>
 		  </category:sub-categories>
  -->
-      <category:promotions prefix="promotion">
-        <template:include template="promotion"/>
-      </category:promotions>
+      <category:random-promotions count="1" prefix="promotion">
+		<list:repeat>
+          <template:include template="promotion"/>
+		</list:repeat>
+	<a href="/promotions">Show all special offers >></a>
+      </category:random-promotions>
        <div style="clear:both" />
        </object:none>
 </webshop:current-search-string>
