--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/index.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/index.html
@@ -1,3 +1,53 @@
 <template:include template="templates/page">
-	<template:include template="promotions"/>
+<head><script type="text/javascript"> 
+      $().ready(function() {
+        $('#coda-slider-1').codaSlider({
+        	autoSlide: true,
+        	autoSlideInterval: 4000,
+        	autoSlideStopWhenClicked: true,
+        	dynamicArrows: false,
+        	dynamicTabs: false
+        	});
+      });
+     </script> </head>
+
+<div class="coda-slider-wrapper"> 
+  <div class="coda-slider preload" id="coda-slider-1"> 
+	    <div class="panel"> 
+	      <div class="panel-wrapper">
+	        <img src="images/home1.jpg"/> 
+	      </div> 
+      </div> 
+	    <div class="panel"> 
+	      <div class="panel-wrapper">
+	        <img src="images/home2.jpg"/> 
+	      </div> 
+	    </div> 
+	    <div class="panel"> 
+	      <div class="panel-wrapper">
+	        <img src="images/home3.jpg"/> 
+	      </div> 
+	    </div> 
+	    <div class="panel"> 
+	      <div class="panel-wrapper">
+	        <img src="images/home4.jpg"/> 
+	      </div> 
+	    </div> 
+  </div><!-- .coda-slider --> 
+</div><!-- .coda-slider-wrapper --> 
+
+<webshop:random-promotions count="3">
+<table>
+<tr>
+  <list:repeat>
+  <td>
+    <template:include template="promotion" />
+  </td>
+  </list:repeat>
+</tr>
+</table>
+<div style="clear:both" >
+  <a href="/promotions">Show all special offers >></a>
+</div>
+</webshop:random-promotions>
 </template:include>
