--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/promotions.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/promotions.html
@@ -1,49 +1,16 @@
-<head><script type="text/javascript"> 
-      $().ready(function() {
-        $('#coda-slider-1').codaSlider({
-        	autoSlide: true,
-        	autoSlideInterval: 4000,
-        	autoSlideStopWhenClicked: true,
-        	dynamicArrows: false,
-        	dynamicTabs: false
-        	});
-      });
-     </script> </head>
 
-<div class="coda-slider-wrapper"> 
-  <div class="coda-slider preload" id="coda-slider-1"> 
-	    <div class="panel"> 
-	      <div class="panel-wrapper">
-	        <img src="images/home1.jpg"/> 
-	      </div> 
-      </div> 
-	    <div class="panel"> 
-	      <div class="panel-wrapper">
-	        <img src="images/home2.jpg"/> 
-	      </div> 
-	    </div> 
-	    <div class="panel"> 
-	      <div class="panel-wrapper">
-	        <img src="images/home3.jpg"/> 
-	      </div> 
-	    </div> 
-	    <div class="panel"> 
-	      <div class="panel-wrapper">
-	        <img src="images/home4.jpg"/> 
-	      </div> 
-	    </div> 
-  </div><!-- .coda-slider --> 
-</div><!-- .coda-slider-wrapper --> 
+<template:include template="templates/page">
+<head> </head>
 
 <table>
-<webshop:promotions group-size="1">
+<webshop:promotions>
 <tr>
-  <list:group>
+  <list:repeat>
   <td>
     <template:include template="promotion" />
   </td>
-  </list:group>
-  
+  </list:repeat>
 </tr>
 </webshop:promotions>
 </table>
+</template:include>
