git-svn-id: file:///var/svn/claro-catalog@755 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/category.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/category.html
@@ -23,15 +23,16 @@
 		  </table>
 		  </category:sub-categories>
  -->
+       </object:none>
+</webshop:current-search-string>
       <category:random-promotions count="1" prefix="promotion">
 		<list:repeat>
           <template:include template="promotion"/>
+       <div style="clear:both" />
 		</list:repeat>
 	<a href="/promotions">Show all special offers >></a>
       </category:random-promotions>
        <div style="clear:both" />
-       </object:none>
-</webshop:current-search-string>
 
 	<category:related-products >
 	<h2>Supplies for this machine</h2>
