--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/promotions.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/promotions.html
@@ -1,7 +1,7 @@
 
 <template:include template="templates/page">
 <head> </head>
-
+<h1>Special Offers</h1>
 <table>
 <webshop:promotions>
   <list:repeat>
