git-svn-id: file:///var/svn/claro-catalog@771 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/xml/promotions.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/xml/promotions.html
@@ -3,9 +3,9 @@
 		<cms:paging>
   <promotion>
 <promotion:product>
-    <promotion-volume><promotion:volume-discount/></promotion-volume>
-    <promotion-end><promotion:end-date/></promotion-end>
-    <promotion-price><promotion:price  plain="true"/></promotion-price>
+    <PromotionVolume><promotion:volume-discount/></PromotionVolume>
+    <PromotionEnd><promotion:end-date/></PromotionEnd>
+    <PromotionPrice><promotion:price  plain="true"/></PromotionPrice>
 	<product>
 		<Name><product:value property="Name"/></Name>
 		<Description><product:value property="Description"/></Description>
